Add jvm argument to allow dynamic attachment of agent